[gd_scene load_steps=11 format=3 uid="uid://h5oxlt67k8c7"]

[ext_resource type="Script" path="res://ui/in_game_menus/pause_menu/pause_menu.gd" id="1_xw5h1"]
[ext_resource type="Shader" path="res://ui/in_game_menus/pause_menu/pause_menu.gdshader" id="2_xcgu1"]
[ext_resource type="Theme" uid="uid://jd7ot0ssesa0" path="res://ui/themes/general_theme.tres" id="3_pit4n"]
[ext_resource type="PackedScene" uid="uid://bgdbiubpob2jv" path="res://ui/in_game_menus/pause_menu/options_menu/options_menu.tscn" id="3_u0vgy"]
[ext_resource type="PackedScene" uid="uid://bd2l7s55xatgs" path="res://ui/in_game_menus/pause_menu/fast_fwd_menu/fast_fwd_menu.tscn" id="5_ynotj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k7iej"]
shader = ExtResource("2_xcgu1")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_n4v2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(85, 39.5)]
}

[sub_resource type="Animation" id="Animation_7gqkh"]
resource_name = "blur"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.882]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"hide"
}, {
"args": [],
"method": &"show"
}]
}

[sub_resource type="Animation" id="Animation_kk42v"]
resource_name = "slide_out"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(85, 39.5), Vector2(250, 39.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g5o44"]
_data = {
"RESET": SubResource("Animation_n4v2i"),
"blur": SubResource("Animation_7gqkh"),
"slide_out": SubResource("Animation_kk42v")
}

[node name="OverworldPause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xw5h1")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_k7iej")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("3_pit4n")
theme_override_font_sizes/font_size = 5
text = "Resume"
icon_alignment = 1

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("3_pit4n")
theme_override_font_sizes/font_size = 5
text = "Options"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("3_pit4n")
theme_override_font_sizes/font_size = 5
text = "Quit"

[node name="Reset" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("3_pit4n")
theme_override_font_sizes/font_size = 5
text = "Reset"
icon_alignment = 1

[node name="TestFwd" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme = ExtResource("3_pit4n")
theme_override_font_sizes/font_size = 5
text = "TestFwd"
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g5o44")
}

[node name="OptionsMenu" parent="." node_paths=PackedStringArray("pause_menu") instance=ExtResource("3_u0vgy")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
pause_menu = NodePath("..")

[node name="FastFwdMenu" parent="." node_paths=PackedStringArray("pause_menu") instance=ExtResource("5_ynotj")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
pause_menu = NodePath("..")

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TestFwd" to="." method="_on_test_fwd_pressed"]
